--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
   <body>
 
-    <h1>Wow Jason this is a super cool site how did you make it?</h1>
+    <div id="first section">
+      <h1>Wow Jason this is a super cool site how did you make it?</h1>
 
+      <p>I'm just doing it in html I haven't even set up the css yet I don't know if it's that good yet haha</p>
+    </div>
+    
   </body>
 </html>
