--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 
   <body>
 
-    <div id="first section">
+    <div id="first">
       <h1>Wow Jason this is a super cool site how did you make it?</h1>
 
-      <p>I'm just doing it in html I haven't even set up the css yet I don't know if it's that good yet haha</p>
+      <p>I'm just doing it in html I haven't even set up the css yet I don't know if it's that good yet haha.</p>
     </div>
-    
+
+    <div id="second">
+      <p>Ok the css should be set up now I don't know if it's that good though we'll have to see.</p>
+    </div>
+
   </body>
 </html>
