--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="css/main.css">
+
   <head>
     <meta charset="utf-8">
     <title>Will this even be good???</title>
