--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <p class="regular">I think I want the text to be bigger</p>
 
-      <p>There we go</p>
+      <p class="better">There we go</p>
 
 
     </div>
