--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
     </div>
 
     <div id="second">
-      <p class="regular">Ok the css should be set up now I don't know if it's that good though we'll have to see.</p>
+      <p>Ok the css should be set up now I don't know if it's that good though we'll have to see.</p>
 
-      <p class="regular">I think I want the text to be bigger</p>
+      <p>I think I want the text to be bigger</p>
 
       <p class="better">There we go</p>
 
+      <p class="better"> The white is too hard to read I need a different color</p>
+
+      <p class="colored">Ok that's better</p>ß
 
     </div>
 
