--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <p class="better"> The white is too hard to read I need a different color</p>
 
-      <p class="colored">Ok that's better</p>ß
+      <p class="colored">Ok that's better</p>
 
     </div>
 
