--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel="stylesheet" href="css/main.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
   <head>
     <meta charset="utf-8">
@@ -26,6 +28,8 @@
       <p class="better"> The white is too hard to read I need a different color</p>
 
       <p class="colored">Ok that's better</p>
+
+      <p class="best">This font is pretty good</p>
 
     </div>
 
