--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
       <p class="best">This font is pretty good</p>
 
+      <h1 class="mainH1">Let's Start Formatting</h1>
+
     </div>
 
   </body>
