adding text and aside

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
       <p class="final">That took me way too long, flex box is not like riding a bike.</p>
 
+      <p class="final">I want to add an aside but I don't know if I'll be able to format it.</p>
+
+      <aside>
+        This is me testing the aside.
+      </aside>
+
     </div>
 
   </body>
