starting the aside formatting

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p class="final">I want to add an aside but I don't know if I'll be able to format it.</p>
 
       <aside>
-        This is me testing the aside.
+        This is me testing the aside with a lot of text because I want to see how it'd look as a larger paragraph next to a bigger paragraph of normal text.
       </aside>
 
     </div>
