the aside isn't working I might have to ditch it

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <p class="final">That took me way too long, flex box is not like riding a bike.</p>
 
-      <p class="final">I want to add an aside but I don't know if I'll be able to format it.</p>
+      <p class="final">I want to add an aside but I don't know if I'll be able to format it. sjsjsjjjsjsjjjsjsjsjsjsjsjsjjsjsjsjjsjjsjsjjsjjsssjsjjsssjjsjsjs</p>
 
       <aside>
         This is me testing the aside with a lot of text because I want to see how it'd look as a larger paragraph next to a bigger paragraph of normal text.
