starting to remove the aside

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
       <p class="final">That took me way too long, flex box is not like riding a bike.</p>
 
-      <p class="final">I want to add an aside but I don't know if I'll be able to format it. sjsjsjjjsjsjjjsjsjsjsjsjsjsjjsjsjsjjsjjsjsjjsjjsssjsjjsssjjsjsjs</p>
+      <p class="final">I want to add an aside but I don't know if I'll be able to format it.</p>
 
       <aside>
         This is me testing the aside with a lot of text because I want to see how it'd look as a larger paragraph next to a bigger paragraph of normal text.
       </aside>
 
-      <p class="final">The aside worked! Now I just need to add a bunch of text to see how it looks when it's all at full capacity and stuff so I'll just put in some Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="final">I can't get the aside to work and frankly I don't remotely feel like it.</p>
 
     </div>
 
