--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
       <p class="final">I want to add an aside but I don't know if I'll be able to format it.</p>
 
-      <aside>
+      <!-- <aside>
         This is me testing the aside with a lot of text because I want to see how it'd look as a larger paragraph next to a bigger paragraph of normal text.
-      </aside>
+      </aside> -->
 
       <p class="final">I can't get the aside to work and frankly I don't remotely feel like it.</p>
 
