first image sizing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
         This is me testing the aside with a lot of text because I want to see how it'd look as a larger paragraph next to a bigger paragraph of normal text.
       </aside> -->
 
-      <p class="final">I can't get the aside to work and frankly I don't remotely feel like it.</p>
+      <p class="final">I can't get the aside to work and frankly I don't remotely feel like it, so now I have to figure out what to add next. I haven't used an image in a while so I'll do that.</p>
+
+      <img src="img/cards.jpg" alt="A picture of knees and a card and it looks really nice">
+
+      <p class="final">Wooaaahhhhh that's really big lets size that down a little.</p>
+
+      <img class="sized" src="img/cards.jpg" alt="A picture of knees and a card and it looks really nice">
 
     </div>
 
