second image sizing

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
       <img class="sized" src="img/cards.jpg" alt="A picture of knees and a card and it looks really nice">
 
+      <p class="final">That looks really nice, let's add a gallery.</p>
+
     </div>
 
   </body>
