--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 
       <p class="final">That looks really nice, let's add a gallery.</p>
 
+      <div class="gallery"> <!--All of this code was taken from w3schools.com -->
+        <a target="_blank" href="cards.jpg">
+          <img src="cards.jpg" alt="Same pic as before" width="600" height="400">
+        </a>
+      </div>
+
     </div>
 
   </body>
