--- a/index.html
+++ b/index.html
@@ -54,8 +54,32 @@
       <p class="final">That looks really nice, let's add a gallery.</p>
 
       <div class="gallery"> <!--All of this code was taken from w3schools.com -->
-        <a target="_blank" href="cards.jpg">
-          <img src="cards.jpg" alt="Same pic as before" width="600" height="400">
+        <a target="_blank" href="img/cards.jpg">
+          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        </a>
+      </div>
+
+      <div class="gallery"> <!--All of this code was taken from w3schools.com -->
+        <a target="_blank" href="img/cards.jpg">
+          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        </a>
+      </div>
+
+      <div class="gallery"> <!--All of this code was taken from w3schools.com -->
+        <a target="_blank" href="img/cards.jpg">
+          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        </a>
+      </div>
+
+      <div class="gallery"> <!--All of this code was taken from w3schools.com -->
+        <a target="_blank" href="img/cards.jpg">
+          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        </a>
+      </div>
+
+      <div class="gallery"> <!--All of this code was taken from w3schools.com -->
+        <a target="_blank" href="img/cards.jpg">
+          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
         </a>
       </div>
 
