--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       </div>
 
       <div class="gallery"> <!--All of this code was taken from w3schools.com -->
-        <a target="_blank" href="img/cards.jpg">
-          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        <a target="_blank" href="img/bike.jpg">
+          <img src="img/bike.jpg" alt="Picture of a bike laying in some grass" width="600" height="400">
         </a>
       </div>
 
       <div class="gallery"> <!--All of this code was taken from w3schools.com -->
-        <a target="_blank" href="img/cards.jpg">
-          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        <a target="_blank" href="img/goodCreek.jpg">
+          <img src="img/goodCreek.jpg" alt="Picture of a creek" width="600" height="400">
         </a>
       </div>
 
