--- a/index.html
+++ b/index.html
@@ -72,17 +72,15 @@
         </a>
       </div>
 
-
-
       <div class="gallery"> <!--All of this code was taken from w3schools.com -->
-        <a target="_blank" href="img/cards.jpg">
-          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        <a target="_blank" href="img/ebStairs.jpg">
+          <img src="img/ebStairs.jpg" alt="Picture of a guy standing on a sidewalk" width="600" height="400">
         </a>
       </div>
 
       <div class="gallery"> <!--All of this code was taken from w3schools.com -->
-        <a target="_blank" href="img/cards.jpg">
-          <img src="img/cards.jpg" alt="Same pic as before" width="600" height="400">
+        <a target="_blank" href="img/blurryRail.jpg">
+          <img src="img/blurryRail.jpg" alt="picture of a guy walking in front of a rail by a building" width="600" height="400">
         </a>
       </div>
 
