--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
 
       <h1 class="mainH1">Oh wow cool pictures Jason!</h1>
 
+      <p class="final">What if</p>
+
+      <h1 class="sideH1">Text was over here</h1>
+
     </div>
 
   </body>
