--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 
       <p class="final">What if</p>
 
-      <h1 class="sideH1">Text was over here</h1>
+      <h1 class="sideH1">?ext was over here</h1>
+
+      <p class="final">Or over here instead?</p>
 
     </div>
 
