--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <h1 class="sideH1">?ext was over here</h1>
 
-      <p class="final">Or over here instead?</p>
+      <p class="leftFinal">Or over here instead?</p>
 
     </div>
 
