fixed question marks

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <p class="final">What if</p>
 
-      <h1 class="sideH1">?ext was over here</h1>
+      <h1 class="sideH1">text was over here?</h1>
 
       <p class="leftFinal">Or over here instead?</p>
 
