--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <div id="first">
+    <div class="first">
       <h1>Wow Jason this is a super cool site how did you make it?</h1>
 
       <p class="regular">I'm just doing it in html I haven't even set up the css yet I don't know if it's that good yet haha.</p>
@@ -92,6 +92,10 @@
       <p class="leftFinal">Or over here instead?</p>
 
       <p class="final">That'd look pretty terrible</p>
+
+    </div>
+
+    <div class="">
 
     </div>
 
