--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="regular">I'm just doing it in html I haven't even set up the css yet I don't know if it's that good yet haha.</p>
     </div>
 
-    <div id="second">
+    <div class="second">
       <p>Ok the css should be set up now I don't know if it's that good though we'll have to see.</p>
 
       <p>I think I want the text to be bigger</p>
