--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="css/main.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
 
   <head>
     <meta charset="utf-8">
@@ -98,6 +99,8 @@
     <div class="third">
 
       <p class="final">How about a color switch?</p>
+
+      <h1 class="newH1">What if you put in a new font?</h1>
 
     </div>
 
