--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
       <h1 class="newH1">What if you put in a new font?</h1>
 
+      <p class="shittyP">Oh man this one's bad haha it looks like a John Green cover</p>
+
     </div>
 
   </body>
