--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <h1 class="newH1">What if you put in a new font?</h1>
 
-      <p class="shittyP">Oh man this one's bad haha it looks like a John Green cover</p>
+      <p class="shittyP">Oh man this one's bad haha it looks like a John Green cover.</p>
 
     </div>
 
