--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 
       <p class="shittyP">Oh man this one's bad haha it looks like a John Green cover.</p>
 
+      <p class="shittyP">Even worse I just realized it's all caps this is rough. I wonder what it looks like in a big paragraph</p>
+
     </div>
 
   </body>
