--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <p class="shittyP">Oh man this one's bad haha it looks like a John Green cover.</p>
 
-      <p class="shittyP">Even worse I just realized it's all caps this is rough. I wonder what it looks like in a big paragraph</p>
+      <p class="shittyP">Even worse I just realized it's all caps this is rough. I wonder what it looks like in a big paragraph, like if I just kept typing and filling up the screen that way it's just a giant wall of this Where The Wild Things Are ass font like it's a travel vlog or something. I would imagine it's just super overwhelming and unpleasant to read which should be fun to see after I save this and refresh the page to see the new changes I'm putting in right now (the new changes being all of this text).</p>
 
     </div>
 
