--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 
       <p class="shittyP">Even worse I just realized it's all caps this is rough. I wonder what it looks like in a big paragraph, like if I just kept typing and filling up the screen that way it's just a giant wall of this Where The Wild Things Are ass font like it's a travel vlog or something. I would imagine it's just super overwhelming and unpleasant to read which should be fun to see after I save this and refresh the page to see the new changes I'm putting in right now (the new changes being all of this text).</p>
 
+      <p class="shittyP">That was underwhelmingly fine. This assignment is getting annoyingly meta I wonder if this joke is getting tired yet.</p>
+
     </div>
 
   </body>
