--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
 
       <p class="shittyP">That was underwhelmingly fine. This assignment is getting annoyingly meta I wonder if this joke is getting tired yet.</p>
 
+      <h1 class="newH1">You better hope that the other students aren't doing super cool stuff because then you'd have the worst website.</h1>
+
+      <p class="shittyP">The second person being h1 has been super inconsistent so I'm gonna put it to rest for now. And yeah lets hope the others are awful like mine and also that we don't have to do a critique.</p>
+
     </div>
 
   </body>
