--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
       <p class="shittyP">The second person being h1 has been super inconsistent so I'm gonna put it to rest for now. And yeah lets hope the others are awful like mine and also that we don't have to do a critique.</p>
 
-      <p class="shittyP">I'm only at like 60 commits I need to pick</p>
+      <p class="shittyP">I'm only at like 60 commits I need to pick up</p>
 
     </div>
 
