--- a/index.html
+++ b/index.html
@@ -116,5 +116,11 @@
 
     </div>
 
+    <div class="second">
+
+      <p class="final">I'm going back to the original layout the new one was too grating.</p>
+
+    </div>
+
   </body>
 </html>
