--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
 
       <p class="final">I'm going back to the original layout the new one was too grating.</p>
 
+      <p class="final"> I guess the good part of my page is </p>
+
     </div>
 
   </body>
