--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <p class="final">I'm going back to the original layout the new one was too grating.</p>
 
-      <p class="final"> I guess the good part of my page is </p>
+      <p class="final"> I guess the good part of my page is that it's actually stream of consciousness, I mean this is literally what I'm thinking as I'm typing this.</p>
 
     </div>
 
