--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <h2 class="h2next">Maybe I Should Mess With More CSS</h2>
 
-      <img class="sizedFixed" src="img/cards.jpg" alt="A picture of knees and a card and it looks really nice">
+      <img class="sizedFixed" src="img/walkway.jpg" alt="A picture of knees and a card and it looks really nice">
 
     </div>
 
