--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 
       <img class="sizedFixed" src="img/walkway.jpg" alt="A picture of the side of an apartment building">
 
+      <p class="final">That picture is supposed to be fixed but it doesn't really work for some reason.</p>
+
     </div>
 
   </body>
