--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 
       <p class="final">That picture is supposed to be fixed but it doesn't really work for some reason.</p>
 
+      <p class="final">I'm gonna attempt to make two columns, hopefully it actually works.</p>
+
     </div>
 
   </body>
