class for column

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
 
       <p class="final">I'm gonna attempt to make two columns, hopefully it actually works.</p>
 
+      <p class="columns"></p>
+
     </div>
 
   </body>
