--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       <p class="green">GREEN TEXT</p>
 
-      <p class="green"></p>
+      <p class="green">Oh this is a really nice green I like this.</p>
 
     </div>
 
