rest of the page

--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
 
       <p class="green">Oh this is a really nice green I like this.</p>
 
+      <p class="green">I don't have many more commits left so I'm just gonna stick with this green for the rest of the page.</p>
+
     </div>
 
   </body>
