--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       <p class="green">I don't have many more commits left so I'm just gonna stick with this green for the rest of the page.</p>
 
-      <h1 class="greenH1"></h1>
+      <h1 class="greenH1">THIS IS THE REST OF THE PAGE</h1>
 
     </div>
 
